--- a/styles/game.css
+++ b/styles/game.css
@@ -11,31 +11,23 @@
 }
 
 .header {
-  height: 20vh;
+  height: 15vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px 20px 0 20px;
-}
-
-.img-container-score {
-  width: 35%;
-  position: relative;
-}
-
-.img-score {
-  width: 100%;
+  padding: 15px 30px 0 30px;
 }
 
 .score {
-  display: inline;
-  position: absolute;
-  top: 35%;
-  left: 40%;
   color: var(--second-color);
   font-family: var(--main-font);
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.8rem;
+  padding: 40px;
+  background-image: url(../images/potato-chips.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .container-title {
@@ -46,38 +38,29 @@
   width: 100%;
 }
 
-/* Pendent solucionar l'espai raro a l'esquerra de la barra del temps */
-.container-timer {
-  justify-items: flex-end;
-}
-
-.img-container-timer {
-  width: 35%;
-  position: relative;
-}
-
-.img-timer {
-  width: 100%;
-}
-
 .timer {
-  display: inline;
-  position: absolute;
-  top: 22%;
-  left: 40%;
+  font-size: 1.8rem;
   color: var(--main-color);
   font-family: var(--main-font);
   font-weight: bold;
+  padding: 60px;
+  background-image: url(../images/carbon-rod.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 .main {
-  height: 80vh;
+  height: 85vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 0 20px 20px;
   position: relative;
 }
+
+
+/* Per si vull afegir les tecles de pujar i baixar */
 
 /* .keys {
   width: 8%;
