--- a/styles/game.css
+++ b/styles/game.css
@@ -106,17 +106,39 @@
 
 .game-over {
   background-color: var(--main-color);
-  width: 350px;
-  height: 350px;
+  width: 400px;
+  height: 400px;
   position: absolute;
-  right: 40%;
-  top: 30%;
+  right: 37%;
+  top: 25%;
   border-radius: 25px;
   border: var(--second-color) 10px solid;
+  box-shadow: 5px 5px 5px black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 10;
   display: none;
 }
 
 .game-over-title,
 .game-over-img {
   width: 80%;
+}
+
+.play-again {
+  color: var(--main-color);
+  font-family: var(--main-font);
+  text-transform: uppercase;
+  background-color: var(--second-color);
+  box-shadow: 1px 1px 3px black;
+  border-radius: 10px;
+  font-weight: bold;
+  font-size: 1.5rem;
+  padding: 5px;
+
+  &:hover {
+    opacity: 75%;
+  }
 }
