--- a/styles/game.css
+++ b/styles/game.css
@@ -8,6 +8,7 @@
   background-image: url(../images/sky_bg.jpg);
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .header {
@@ -63,7 +64,6 @@
   position: relative;
 }
 
-
 /* Per si vull afegir les tecles de pujar i baixar */
 
 /* .keys {
@@ -84,18 +84,51 @@
   padding-left: 25px;
   z-index: 1;
 }
+/*
+position: absolute
+  chip1 --> top: 3%
+  chip2 --> top: 21%
+  chip3 --> top: 39%
+  chip4 --> top: 57%
+  chip5 --> top: 75%
 
-.chips {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  gap: 5px;
-  position: relative;
-}
+  moviment de 18%
+*/
 
 .chip {
   width: 90px;
+  position: absolute;
+  right: -100px;
+
+  &.chip1 {
+    top: 8%;
+    animation: chip1Animation 5s linear infinite;
+  }
+  &.chip2 {
+    top: 26%;
+    animation: chip1Animation 5s 3s linear infinite;
+  }
+  &.chip3 {
+    top: 44%;
+    animation: chip1Animation 4s 2s linear infinite;
+  }
+  &.chip4 {
+    top: 62%;
+    animation: chip1Animation 7s 4s linear infinite;
+  }
+  &.chip5 {
+    top: 80%;
+    animation: chip1Animation 7s 1s linear infinite;
+  }
+}
+
+@keyframes chip1Animation {
+  0% {
+    right: -100px;
+  }
+  100% {
+    right: calc(100% + 100px); 
+  }
 }
 
 /* Posició exacte en la que la patata queda per sota del Homer */
