--- a/styles/game.css
+++ b/styles/game.css
@@ -5,6 +5,7 @@
 }
 
 .body {
+  background-color: #40246F;
   background-image: url(../images/sky_bg.jpg);
   height: 100vh;
   width: 100vw;
@@ -72,22 +73,8 @@
   margin-top: 10px;
   border-radius: 20px;
   overflow: hidden;
+  box-shadow: 0 0 15px rgba(255, 192, 203, 0.8);
 }
-
-/* Per si vull afegir les tecles de pujar i baixar */
-
-/* .keys {
-  width: 8%;
-}
-
-.up {
-  width: 100%;
-  padding-bottom: 5px;
-}
-
-.down {
-  width: 100%;
-} */
 
 .homer {
   height: 96px;
