Improve timer JS

--- a/styles/game.css
+++ b/styles/game.css
@@ -5,7 +5,7 @@
 }
 
 .body {
-  background-color: #40246F;
+  background-color: #40246f;
   background-image: url(../images/sky_bg.jpg);
   height: 100vh;
   width: 100vw;
